# ReversiGame

./: CMakeLists.txt  README.md  config.yaml  findsdl2dir.cmake  test.py
src/: CMakeLists.txt  idle_tool.h  imgui_idle_optimizer.h  impl_sdl2.cpp  impl_sdl2.h  main.cpp  tqdm.h
src/game/: CMakeLists.txt  game_const.h  game_ui.cpp  game_ui.h  monte_carlo_tree_search.cpp  monte_carlo_tree_search.h  reversi_game.cpp  reversi_game.h
src/imgui/: CMakeLists.txt
src/pgbar/: BlockBar.hpp
